# fed-court-decisions-db

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
analyse-service/: analyse.py
embedding-service/: Dockerfile  README.md  embedding.py
index-search-service/: indexsearch.py
notebooks/: 0 - embed-decisions.ipynb  1- split-decisions.ipynb  2 - upload-vectors.ipynb  3 - optimize-model.ipynb  3 - search-decisions.ipynb  4 - create-vector-generation-lambda-service.ipynb  4 - load-parquet-to-dynamodb.ipynb  4 - search-decisions.ipynb  5 - search-decisions.ipynb  99 - delete-vectors.ipynb  embed-decisions.ipynb  explore-decisions.ipynb  search-decisions.ipynb
src/fed_court_decisions_db/: __about__.py
tests/: __init__.py
